--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -254,6 +254,8 @@
         </button>
       {%- endif -%}
     </div>
+
+    {% render 'banner-product', handle: 'my-tshirt' %}
   {%- endif -%}
 </slideshow-component>
 
