--- a/snippets/banner-product.liquid
+++ b/snippets/banner-product.liquid
@@ -1,52 +1,93 @@
+{% if product %}
+    <script>
+        // Преобразуем объект товара в JSON
+        const productData = {{ product | json }};
+        console.log("PRODUCT DATA:", productData);
+    </script>
+{% endif %}
+
 <section class="product section">
     <div class="container">
         <div class="product__inner">
             <div class="product__gallery">
                 <div class="product__gallery-thumbs">
                     <swiper-container class="product__gallery-thumbs-slider" init="false">
-                        <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>   <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>   <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>
+                        {% for image in product.images %}
+                            <swiper-slide>
+                                <img src="{{ image.src | img_url: '400x' }}" alt="{{ product.title }}">
+                            </swiper-slide>
+                        {% endfor %}
                     </swiper-container>
                 </div>
+
                 <div class="product__gallery-main">
                     <swiper-container class="product__gallery-main-slider"
                                       thumbs-swiper=".product__gallery-thumbs-slider" init="false">
-                        <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>   <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>   <swiper-slide><img src="https://d2opxh93rbxzdn.cloudfront.net/original/2X/4/40cfa8ca1f24ac29cfebcb1460b5cafb213b6105.png" alt=""></swiper-slide>
+                        {% for image in product.images %}
+                            <swiper-slide>
+                                <img src="{{ image.src | img_url: '800x' }}" alt="{{ product.title }}">
+                            </swiper-slide>
+                        {% endfor %}
                     </swiper-container>
                 </div>
             </div>
+
             <div class="product__info">
                 <div class="product__top">
                     <h3 class="product__title title title_h2">
-
+                        {{ product.title }}
                     </h3>
-                    <div class="product__price">
 
+                    <div class="product__price">
+                        {% if product.price_varies %}
+                            {{ product.price_min | money }} – {{ product.price_max | money }}
+                        {% else %}
+                            {{ product.price | money }}
+                        {% endif %}
+                    </div>
+
+                    <div class="product__available">
+                        {% if product.available %}
+                            В наявності
+                        {% else %}
+                            Немає в наявності
+                        {% endif %}
                     </div>
                 </div>
+
                 <div class="product__variants">
                     <div class="product__variants-items">
-                        <button class="product__variants-item">
-
-                        </button>
+                        {% assign colors = product.options_by_name['Color'].values %}
+                        {% for color in colors %}
+                            <button class="product__variants-item">
+                                {{ color }}
+                            </button>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <div class="product__options">
                     <div class="product__options-text">Select Size:</div>
                     <div class="product__options-items">
-                        <button class="product__options-item">
-
-                        </button>
+                        {% assign sizes = product.options_by_name['Size'].values %}
+                        {% for size in sizes %}
+                            <button class="product__options-item">
+                                {{ size }}
+                            </button>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <button class="product__btn btn btn_black">
-                    <span>Add To Bag</span>
+                    <span>Додати в кошик</span>
                 </button>
+
                 <div class="product__descr">
-                    Let your attitude have the edge in your Nike Air Max Plus, a Tuned Air experience that offers
-                    premium stability and unbelievable cushioning.
+                    {{ product.description }}
                 </div>
             </div>
         </div>
+    </div>
 
         <script>
 
