--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -258,6 +258,8 @@
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
     {{ 'banner-product.css' | asset_url | stylesheet_tag }}
+    {{ 'btns.css' | asset_url | stylesheet_tag }}
+    {{ 'variables.css' | asset_url | stylesheet_tag }}
     <link rel="stylesheet" href="{{ 'component-cart-items.css' | asset_url }}" media="print" onload="this.media='all'">
 
     {%- if settings.cart_type == 'drawer' -%}
